@@ -1,18 +1,24 @@
 package com.project.login.domain.entitys.user;
 
+import com.project.login.domain.entitys.enums.UserRole;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public record UserDetail(User user) implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(user.getUserRole().name());
-        return Collections.singletonList(authority);
+        if(this.user.getUserRole() == UserRole.ADMIN) {
+            return List.of(
+                    new SimpleGrantedAuthority("ROLE_ADMIN"),
+                    new SimpleGrantedAuthority("ROLE_USER")
+            );
+        }
+        else return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
